# translator-to-notion

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
.claude/: settings.local.json
agent/: __init__.py  sdk_translator_agent.py
agent/prompts/: __init__.py  domain_prompts.py  translation_prompts.py
agent/tools/: __init__.py  notion_publisher.py  notion_tool.py  tools_server.py  web_fetcher.py  web_fetcher_tool.py
backend/: __init__.py  app.py
backend/middleware/: __init__.py  auth.py
backend/routes/: __init__.py  health.py  notion.py  tasks.py  translate.py
backend/schemas/: __init__.py  translate_schema.py
backend/services/: __init__.py  cache_service.py  chunking_service.py  task_manager.py  task_persistence.py  translation_service.py
config/: __init__.py  config.yaml.example  settings.py
data/: .gitkeep  tasks.json
docs/: DEPLOYMENT.md  background-translation-plan.md  claude-agent-sdk-migration.md  code-review-report.md  implementation-plan.md  process.md
frontend/: index.html  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/components/: DomainSelector.tsx  LoadingSpinner.tsx  NotionSyncButton.tsx  ResultDisplay.tsx  TranslateForm.tsx
frontend/src/pages/: HomePage.tsx  TaskDetailPage.tsx  TaskListPage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
